--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				</article>
 			</section>
 			<aside id="aside-column">
-				<blockquote>Mensaje número uno</blockquote>
+				<blockquote>mensaje de aside-colum con blockquote en el apartado section</blockquote>
 				<blockquote>Mensaje número dos</blockquote>
 			</aside>
 			<footer id="footer-foot">
